--- a/JavaApplication69/nbproject/project.properties
+++ b/JavaApplication69/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ATM
-main.class=javaapplication69.JavaApplication69
+main.class=javaapplication69.ATM
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
